--- a/style.css
+++ b/style.css
@@ -12,14 +12,12 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
-.Snake {
-    background-color: green;
-}
-
-.Food {
-    background-color: brown;
-}
-
 #Direction {
     display: none;
+}
+
+#Timer {
+    position: absolute;
+    left: 400px;
+    font-size: 20px;
 }
